tests/integration/pass/functions_local_vars.kr
# Test: Functions with local variables
# Expected: Pass

function calculate with x:
    set temp to x times 2
    set result to temp plus 10
    return result

call calculate with 5
call calculate with 10

