tests/integration/fail/math_sqrt_arg_error.kr
# Test sqrt function argument count error

# sqrt with no args
set x to call sqrt
# Expected: Runtime error - sqrt expects 1 argument

